# grafik

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
example/: CMakeLists.txt  Cargo.toml
example/src/: main.cpp  main.rs
src/: events.rs  lib.rs  logger.h  main.cpp  prelude.rs  renderer.rs  utils.rs  windowing.rs
src/renderer/: context.rs
src/utils/: color.rs
src/windowing/: config.rs
